# google-test

./: .gitignore  CMakeLists.txt  README.md  main.c
libsum/: sum.c  sum.h
test/: sum_test.cc
